--- a/api/app/config/config.ini
+++ b/api/app/config/config.ini
@@ -1,10 +1,10 @@
 ;App Parameters
 
-app=KingQuick
+app=IkitestAPI
 version=1.0.0
 
 ;Database Parameters
 host=localhost
-database=betasoundz_db
+database=hdb_goldlearners
 user=root
 password=
